# spanned

./: CHANGELOG.md  Cargo.toml
examples/: anyhow_output.rs  anyhow_output.run.stderr  eyre_output.rs  eyre_output.run.stderr  eyre_output_context.rs  eyre_output_context.run.stderr  spanned_err.rs  spanned_err.run.stderr  spanned_error.rs  spanned_error.run.stderr
src/: error.rs  lib.rs  span.rs
src/error/: context.rs
tests/: ui.rs
