[package]
name = "spanned"
version = "0.1.0"
edition = "2021"
description = "string processing with file/line/col information and the regular rust `str` API"
license = "MIT OR Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
color-eyre = "0.6.2"
