[package]
name = "spanned"
version = "0.6.0"
edition = "2021"
description = "string processing with file/line/col information and the regular rust `str` API"
license = "MIT OR Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
annotate-snippets = { version = "0.11.5", features = ["testing-colors"] }
anyhow = "1.0.98"
bstr = "1.6.0"
color-eyre = "0.6.2"
colored = "3.0.0"

[dev-dependencies]
ctrlc = "3.4.7"
ui_test = "0.30.1"

[[test]]
name = "ui"
harness = false
